# serializer version: 1
# name: test_feature_spec_version_deterministic
  '473c860ef72ef30b5c2d6aa6601a3342d816512536b03cd61808e0dd93b2db40'
# ---
# name: test_feature_spec_version_includes_all_properties
  '1e512589810ef79a0a799ea2c1d3883cbaa13a881ccb3131148d8310b083d433'
# ---
# name: test_feature_spec_version_recorded_in_metadata_store
  dict({
    'feature_key': 'recorded/feature',
    'feature_spec_version': 'c19bf840ba81c8e03f3eb0516a042157623def5df12cf1c92f453d943f0ad9b7',
    'feature_version': '0c7b2d83252fbf2f689bec7d37c4f7ffb103755d11eafabc1e000a372f415d83',
    'snapshot_version': '14d4294da40f4ab27ca85eb739fffd70e92c92522dbcba995cfa2aa343988bf3',
  })
# ---
# name: test_feature_spec_version_stored_in_snapshot
  dict({
    'feature_class_path': 'test_spec_version.SnapshotFeature',
    'feature_spec': dict({
      'deps': None,
      'fields': list([
        dict({
          'code_version': '1',
          'deps': list([
          ]),
          'key': list([
            'data',
          ]),
        }),
      ]),
      'id_columns': list([
        'sample_uid',
      ]),
      'key': list([
        'snapshot',
        'test',
      ]),
      'metadata': dict({
      }),
    }),
    'feature_spec_version': 'ffac5337d8ef946b5ebc04f54629037e5c7fc1affa56b9de24be7861bb70aa4a',
    'feature_tracking_version': 'e94e07a211ecbb8852ad5b50eeff420370af84fc24ec39c511b2ca32ac9c6bb7',
    'feature_version': '7cfde77960e3cf10327e9cb97f311418b101fc5ee2c146922a997306e318edaf',
    'project': 'test',
  })
# ---
# name: test_feature_spec_version_with_column_selection_and_rename
  '3bb050c2694b2dd47bcdfecf503a040723bcd2f126051cd57716db41d8a508ec'
# ---
# name: test_feature_spec_version_with_multiple_complex_deps
  '51979d021b184333a585c8cd16f7103c65272a95da1c669d34ca516b73feb8e1'
# ---
